--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -33,13 +33,16 @@
   section {
     margin: 0 5%;
   }
-  .section__pic-container {
+  .section-pic-container {
     width: 275px;
     height: 275px;
     margin: 0 auto 2rem;
   }
   .about-containers {
     margin-top: 0;
+  }
+  .btn {
+    margin-bottom: 12px;
   }
 }
 
@@ -81,12 +84,13 @@
     gap: 0.5rem;
     text-align: center;
   }
-  .section__pic-container {
+  .section-pic-container {
+    margin-top: 10px;
     width: auto;
     height: 46vw;
     justify-content: center;
   }
-  .section__text__p2 {
+  .section-text-p2 {
     font-size: 1.25rem;
   }
   .title {
@@ -94,5 +98,11 @@
   }
   .text-container {
     text-align: justify;
+  }
+  .btn {
+    margin-bottom: 12px;
+  }
+  .profile-pic {
+    width: 300px;
   }
 }
