--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
 }
 
 p {
-  color: rgb(85, 85, 85);
+  color: #555;
 }
 
 /* Transition */
@@ -41,15 +41,15 @@ nav {
 }
 
 a {
-  color: black;
+  color: #000;
   text-decoration: none;
 }
 
 a:hover {
-  color: grey;
+  color: #808080;
   text-decoration: underline;
   text-underline-offset: 1rem;
-  text-decoration-color: rgb(181, 181, 181);
+  text-decoration-color: #b5b5b5;
 }
 
 .logo {
@@ -82,7 +82,7 @@ a:hover {
 .hamburger-icon span {
   width: 100%;
   height: 2px;
-  background-color: black;
+  background-color: #000;
   transition: all 0.3 ease-in-out;
 }
 
@@ -90,7 +90,7 @@ a:hover {
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background-color: #fff;
   width: fit-content;
   max-height: 0;
   overflow: hidden;
@@ -102,7 +102,7 @@ a:hover {
   padding: 10px;
   text-align: center;
   font-size: 1.5rem;
-  color: black;
+  color: #000;
   text-decoration: none;
   transition: all 0.3 ease-in-out;
 }
@@ -158,27 +158,33 @@ section {
   height: 80vh;
 }
 
-.section__pic-container {
+.section-pic-container {
   display: flex;
   height: 400px;
   width: 400px;
   margin: auto 0;
 }
 
-.section__text {
+.profile-pic {
+  width: 380px;
+  border-radius: 50%;
+}
+
+.section-text {
   align-self: center;
   text-align: center;
 }
 
-.section__text p {
+.section-text p {
   font-weight: 600;
 }
 
-.section__text__p1 {
+.section-text-p1 {
+  font-size: 1.3rem;
   text-align: center;
 }
 
-.section__text__p2 {
+.section-text-p2 {
   font-size: 1.75rem;
   margin-bottom: 1rem;
 }
@@ -191,6 +197,7 @@ section {
 #socials-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 1rem;
   gap: 1rem;
 }
@@ -201,24 +208,24 @@ section {
   height: 2rem;
 }
 
-/* Buttons */
-.btn-container {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
+.medium-icon {
+  height: 2.3rem;
+  border-radius: 50%;
 }
 
+/* Buttons */
 .btn {
   font-weight: 600;
   transition: all 300ms ease;
   padding: 1rem;
   width: 8rem;
   border-radius: 2rem;
+  margin-right: 12px;
 }
 
 .btn-color-1, 
 .btn-color-2 {
-  border: rgb(53, 53, 53) 0.1rem solid;
+  border: #555 0.1rem solid;
 }
 
 .btn-color-1:hover, 
@@ -228,12 +235,13 @@ section {
 
 .btn-color-1, 
 .btn-color-2:hover {
-  background: rgb(53, 53, 53);
-  color: white;
+  background: #808080;
+  color: #000;
 }
 
 .btn-color-1:hover {
-  background: rgb(0, 0, 0);
+  background: #000;
+  color: #fff;
 }
 
 .btn-color-2 {
@@ -241,7 +249,7 @@ section {
 }
 
 .btn-color-2:hover {
-  background: rgb(255, 255, 255) 0.1rem solid;
+  background: #fff 0.1rem solid;
 }
 
 .btn-container {
@@ -282,10 +290,10 @@ section {
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  background: white;
+  background: #fff;
   border-radius: 2rem;
-  border: rgb(53 ,53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  border: #353535 0.1rem solid;
+  border-color: #a3a3a3;
   text-align: center;
 }
 
@@ -306,7 +314,7 @@ section {
 }
 
 .experience-sub-title {
-  color: rgb(85, 85, 85);
+  color: #555;
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 2rem;
@@ -344,8 +352,8 @@ article .icon {
 }
 
 .color-container {
-  border-color: rgb(163, 163, 163);
-  background-color: rgb(250, 250, 250);
+  border-color: #a3a3a3;
+  background-color: #fafafa;
 }
 
 .project-img {
@@ -356,16 +364,15 @@ article .icon {
 
 .project-title {
   margin: 1rem;
-  color: black;
+  color: #000;
 }
 
 .project-btn {
-  color: black;
-  border-color: rgb(163, 163, 163);
+  color: #000;
+  border-color: #a3a3a3;
 }
 
 /* Contact */
-
 #contact {
   display: flex;
   justify-content: center;
@@ -377,9 +384,9 @@ article .icon {
   display: flex;
   justify-content: center;
   border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  background-color: (250, 250, 250);
+  border: #353535 0.1rem solid;
+  border-color: #a3a3a3;
+  background-color: #fafafa;
   margin: 2rem auto;
   padding: 0.5rem;
 }
